--- a/staff.html
+++ b/staff.html
@@ -15,6 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="staff.html">Staff Team</a></li>
                     <li><a href="regels.html">Regels</a></li>
                 </ul>
             </nav>
@@ -24,25 +25,19 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1>✈️ Welkom bij JD Games - Ontmoet Ons Team</h1>
-
-                <p>Geachte Spelers,</p>
+                <h1 class="page-title">✈️ Welkom bij JD Games - Ontmoet Ons Team ✈️</h1>
                 <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
-
+                
                 <h2>Ons Team</h2>
-                <h3>Jonathan - Eigenaar</h3>
-                <p>Functie: Als oprichter en servereigenaar is Jonathan verantwoordelijk voor de betalingen en het helpen van het development team. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Hij is als Staff Coördinator verantwoordelijk voor het opletten en reageren op staff klachten & Refund Tickets.</p>
-
-                <h3>David - Eigenaar</h3>
-                <p>Functie: Als oprichter en servereigenaar is David verantwoordelijk voor de betalingen en het helpen van de staffleden / Spelers. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Hij is als Staff Coördinator verantwoordelijk voor het opletten en reageren op staff klachten & Refund Tickets.</p>
-
-                <h3>Nisse - Management</h3>
-                <p>Functie: Nisse is lid van ons management team en het Hoofd Development team. Zijn verantwoordelijkheid is het developen en bouwen van plugins & Gebouwen in onze server. Hij is ook onderdeel van ons Sollicitatie Coördinator en zal dus ook sollicitaties nakijken. Hij is als Staff Coördinator verantwoordelijk voor het opletten en reageren op staff klachten & Refund Tickets.</p>
+                <ul>
+                    <li><strong>Jonathan - Eigenaar</strong>: Verantwoordelijk voor betalingen, helpende hand voor het development team, en onderdeel van sollicitatie coördinatie.</li>
+                    <li><strong>David - Eigenaar</strong>: Verantwoordelijk voor betalingen en het ondersteunen van staffleden/spelers.</li>
+                    <li><strong>Nisse - Management</strong>: Hoofd Development team, verantwoordelijk voor plugins & bouwen in de server.</li>
+                </ul>
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
