--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="section">
             <div class="container">
                 <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-                <p>Informatie Over ons:</p>
+                <h2 class="section-title">Informatie Over ons:</h2>
                 <ul>
                     <li>✈️ IP-adres: Play.jdgames.nl</li>
                     <li>⚡ Versie: 1.21+</li>
@@ -36,7 +36,7 @@
                     <li>⛄ Website: <a href="shop.jdgames.nl">shop.jdgames.nl</a></li>
                 </ul>
 
-                <h2>Contacteer ons:</h2>
+                <h2 class="section-title">Contacteer ons:</h2>
                 <ul>
                     <li>☎️ Discord: Maak een ticket aan</li>
                     <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
