--- a/regels.html
+++ b/regels.html
@@ -26,24 +26,18 @@
         <section class="section">
             <div class="container">
                 <h1 class="page-title">⚔️ Regels - JD Games ⚔️</h1>
-                <h2>Skyblock Server Reglement</h2>
-                <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke schorsingen of een permanente ban.</p>
+                <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Kies de server waarvoor je de regels wilt zien:</p>
 
-                <h3>Artikel 1 - Geen Griefing of Diefstal</h3>
-                <ul>
-                    <li>1.1 Het is verboden om de eigendommen van andere spelers opzettelijk te vernietigen of schade toe te brengen aan hun eilanden.</li>
-                    <li>1.2 Het stelen van items of middelen van andere spelers is niet toegestaan.</li>
-                    <li>1.3 Samenwerken is toegestaan.</li>
-                </ul>
-
-                <!-- Voeg alle andere artikelen en regels hier in zoals beschreven -->
-                
-                <h3>Overtredingen en Sancties</h3>
-                <p>Bij overtreding van deze regels behoudt het serverteam zich het recht voor om passende maatregelen te nemen, waaronder waarschuwingen, tijdelijke ban, of permanente bans, afhankelijk van de ernst van de overtreding. Elk staff lid heeft het recht om zelf te bepalen welke straf voor jou gepast is.</p>
+                <!-- Keuze Knoppen -->
+                <div class="button-container">
+                    <a href="faction.html" class="rule-button">⚔️ Faction Server</a>
+                    <a href="skyblock.html" class="rule-button">✈️ Skyblock Server</a>
+                </div>
             </div>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
