--- a/faction.html
+++ b/faction.html
@@ -25,7 +25,7 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1>⚔️ Faction Server Reglement ⚔️</h1>
+                <h1 class="page-title">⚔️ Faction Server Reglement ⚔️</h1>
                 <p>Om een eerlijke, veilige en plezierige speelervaring te waarborgen, dienen alle spelers de volgende regels na te leven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke ban of permanente bans.</p>
 
                 <h2>Artikel 1 - Geen Hacks</h2>
