--- a/skyblock.html
+++ b/skyblock.html
@@ -25,7 +25,7 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1>⚡ Skyblock Server Reglement ⚡</h1>
+                <h1 class="page-title">⚡ Skyblock Server Reglement ⚡</h1>
                 <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Overtredingen kunnen leiden tot waarschuwingen, tijdelijke schorsingen of een permanente ban.</p>
 
                 <h2>Artikel 1 - Geen Griefing of Diefstal</h2>
