--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JD Games Minecraft Server</title>
+    <title>Home - JD Games</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +17,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="staff.html">Staff Team</a></li>
                     <li><a href="regels.html">Regels</a></li>
+                    <li><a href="updates.php">Updates</a></li> <!-- Nieuwe link naar de updates pagina -->
                 </ul>
             </nav>
         </div>
@@ -25,22 +26,27 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-                <h2 class="section-title">Informatie Over ons:</h2>
-                <ul>
-                    <li>✈️ IP-adres: Play.jdgames.nl</li>
-                    <li>⚡ Versie: 1.21+</li>
-                    <li>⚔️ Gamemode: Survival & Skyblock</li>
-                    <li>❄️ Openings Tijden: 24/7</li>
-                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT">https://discord.gg/9haVXV8gXT</a></li>
-                    <li>⛄ Website: <a href="shop.jdgames.nl">shop.jdgames.nl</a></li>
-                </ul>
+                <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+                <p>Welkom op de officiële website van JD Games! Hier kun je alles vinden over onze Minecraft servers, updates, en ons team. Neem gerust een kijkje!</p>
 
-                <h2 class="section-title">Contacteer ons:</h2>
+                <h2>Wat is JD Games?</h2>
+                <p>JD Games is een community-gebaseerde Minecraft server met verschillende spelmodi, waaronder Factions, Skyblock en meer. Onze missie is om een leuke, veilige en spannende spelervaring te bieden voor iedereen.</p>
+
+                <h2>Waarom JD Games?</h2>
+                <p>Bij JD Games draait alles om de community. We zorgen voor regelmatige updates, evenementen en een actieve staff die altijd klaar staat om te helpen.</p>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="container">
+                <h2>Onze Servers</h2>
+                <p>We bieden verschillende spelmodi aan, waaronder:</p>
                 <ul>
-                    <li>☎️ Discord: Maak een ticket aan</li>
-                    <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
+                    <li><strong>Faction Server</strong> - Bouw je eigen imperium en strijd tegen andere spelers!</li>
+                    <li><strong>Skyblock Server</strong> - Begin je avontuur op een klein eiland en breid uit tot een gigantisch rijk!</li>
                 </ul>
+                <a href="faction.html" class="btn">Faction Server</a>
+                <a href="skyblock.html" class="btn">Skyblock Server</a>
             </div>
         </section>
     </main>
