--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="staff.html">Staff Team</a></li>
                     <li><a href="regels.html">Regels</a></li>
-                    <li><a href="updates.html">Updates</a></li> <!-- Link naar de updates pagina -->
+                    <li><a href="updates.html">Updates</a></li>
                 </ul>
             </nav>
         </div>
@@ -33,14 +33,14 @@
 
         <section class="section about">
             <div class="container">
-                <h2>Informatie Over Ons</h2>
+                <h2>💬 Informatie Over Ons</h2>
                 <p>JD Games is een Minecraft-server die spelers van over de hele wereld verwelkomt. Met een toegewijd team zorgen we voor een veilige en leuke speelomgeving.</p>
             </div>
         </section>
 
         <section class="section contact">
             <div class="container">
-                <h2>Contacteer Ons</h2>
+                <h2>📬 Contacteer Ons</h2>
                 <p>Heb je vragen of suggesties? Neem contact op via onze sociale kanalen of stuur ons een bericht.</p>
             </div>
         </section>
