--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
     </header>
 
     <main>
-        <section class="section welcome">
+        <section class="welcome-section">
             <div class="container">
                 <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-                <p>Op onze server beleef je een unieke Minecraft-ervaring! Doe mee aan epische gevechten, bouw de beste basissen en geniet van een gezellige community.</p>
+                <p>Beleef een unieke Minecraft-ervaring met spannende gevechten, samenwerking en een hechte community.</p>
             </div>
         </section>
 
-        <section class="section about">
+        <section class="about-section">
             <div class="container">
                 <h2>💬 Informatie Over Ons</h2>
-                <p>JD Games is een Minecraft-server die spelers van over de hele wereld verwelkomt. Met een toegewijd team zorgen we voor een veilige en leuke speelomgeving.</p>
+                <p>JD Games is een Minecraft-server die een veilige en plezierige speelomgeving biedt voor spelers wereldwijd.</p>
             </div>
         </section>
 
-        <section class="section contact">
+        <section class="contact-section">
             <div class="container">
                 <h2>📬 Contacteer Ons</h2>
-                <p>Heb je vragen of suggesties? Neem contact op via onze sociale kanalen of stuur ons een bericht.</p>
+                <p>Heb je vragen of suggesties? Neem contact met ons op via onze sociale kanalen of stuur een bericht.</p>
             </div>
         </section>
     </main>
