--- a/index.html
+++ b/index.html
@@ -24,24 +24,36 @@
     </header>
 
     <main>
+        <!-- Welkom sectie met de centrale tekst -->
         <section class="welcome-section">
             <div class="container">
                 <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-                <p>Beleef een unieke Minecraft-ervaring met spannende gevechten, samenwerking en een hechte community.</p>
             </div>
         </section>
 
+        <!-- Over ons sectie -->
         <section class="about-section">
             <div class="container">
                 <h2>💬 Informatie Over Ons</h2>
-                <p>JD Games is een Minecraft-server die een veilige en plezierige speelomgeving biedt voor spelers wereldwijd.</p>
+                <ul>
+                    <li>✈️ IP-adres: Play.jdgames.nl</li>
+                    <li>⚡ Versie: 1.21+</li>
+                    <li>⚔️ Gamemode: Survival & Skyblock</li>
+                    <li>❄️ Openings Tijden: 24/7</li>
+                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT">discord.gg/9haVXV8gXT</a></li>
+                    <li>⛄ Website: <a href="https://shop.jdgames.nl">shop.jdgames.nl</a></li>
+                </ul>
             </div>
         </section>
 
+        <!-- Contact sectie -->
         <section class="contact-section">
             <div class="container">
                 <h2>📬 Contacteer Ons</h2>
-                <p>Heb je vragen of suggesties? Neem contact met ons op via onze sociale kanalen of stuur een bericht.</p>
+                <ul>
+                    <li>☎️ Discord: Maak een ticket aan</li>
+                    <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
+                </ul>
             </div>
         </section>
     </main>
