--- a/staff.html
+++ b/staff.html
@@ -25,7 +25,7 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1 class="page-title">✈️ Welkom bij JD Games - Ontmoet Ons Team ✈️</h1>
+                <h1 class="page-title">🛡️ Welkom bij JD Games - Ontmoet Ons Team 🛡️</h1>
                 <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk Stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
                 
                 <h2>Ons Team</h2>
