--- a/regels.html
+++ b/regels.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <section class="section">
+        <section class="regels-section">
             <div class="container">
                 <h1 class="page-title">⚔️ Regels - JD Games ⚔️</h1>
                 <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Kies de server waarvoor je de regels wilt zien:</p>
