--- a/regels.html
+++ b/regels.html
@@ -28,10 +28,10 @@
                 <h1 class="page-title">⚔️ Regels - JD Games ⚔️</h1>
                 <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Kies de server waarvoor je de regels wilt zien:</p>
 
-                <!-- Keuze Knoppen -->
+                <!-- Knoppen Container -->
                 <div class="button-container">
-                    <a href="faction.html" class="rule-button">⚔️ Faction Server</a>
-                    <a href="skyblock.html" class="rule-button">✈️ Skyblock Server</a>
+                    <button onclick="window.location.href='faction.html'" class="rule-button">⚔️ Faction Server</button>
+                    <button onclick="window.location.href='skyblock.html'" class="rule-button">✈️ Skyblock Server</button>
                 </div>
             </div>
         </section>
