--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JD Games - Welkom</title>
+    <title>JD Games Minecraft Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,35 +23,25 @@
     </header>
 
     <main>
-        <!-- Welkom sectie met de centrale tekst -->
-        <section class="welcome-section">
+        <section class="section">
             <div class="container">
-                <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-            </div>
-        </section>
-
-        <!-- Over ons sectie -->
-        <section class="about-section">
-            <div class="container">
-                <h2>💬 Informatie Over Ons</h2>
+                <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+                <p>Welkom op onze Minecraft server! Hier kun je genieten van onze geweldige Survival & Skyblock gamemodes. Bekijk de onderstaande informatie om alles te weten te komen.</p>
+                
+                <h2>Informatie Over ons:</h2>
                 <ul>
                     <li>✈️ IP-adres: Play.jdgames.nl</li>
                     <li>⚡ Versie: 1.21+</li>
                     <li>⚔️ Gamemode: Survival & Skyblock</li>
                     <li>❄️ Openings Tijden: 24/7</li>
-                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT">discord.gg/9haVXV8gXT</a></li>
-                    <li>⛄ Website: <a href="https://shop.jdgames.nl">shop.jdgames.nl</a></li>
+                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">https://discord.gg/9haVXV8gXT</a></li>
+                    <li>⛄ Website: <a href="http://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
                 </ul>
-            </div>
-        </section>
 
-        <!-- Contact sectie -->
-        <section class="contact-section">
-            <div class="container">
-                <h2>📬 Contacteer Ons</h2>
+                <h2>Contacteer ons:</h2>
                 <ul>
                     <li>☎️ Discord: Maak een ticket aan</li>
-                    <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
+                    <li>☎️ Email: <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
                 </ul>
             </div>
         </section>
