--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JD Games - Minecraft Server</title>
+    <title>⚔️ Welkom op de JD Games Minecraft Server ⚔️</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <div class="container">
             <div class="logo">
@@ -22,15 +23,38 @@
         </div>
     </header>
 
-    <main>
-        <section class="section">
-            <div class="container">
-                <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-                <p>Welkom bij onze server! We hopen dat je geniet van de ervaring op JD Games.</p>
-            </div>
-        </section>
-    </main>
+    <!-- Hero Section (Welkomstbericht) -->
+    <section class="hero-section">
+        <h1 class="hero-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+    </section>
 
+    <!-- Informatie Over Ons -->
+    <section class="about-section">
+        <div class="container">
+            <h2>Informatie Over ons:</h2>
+            <ul>
+                <li>✈️ <strong>IP-adres:</strong> Play.jdgames.nl</li>
+                <li>⚡ <strong>Versie:</strong> 1.21+</li>
+                <li>⚔️ <strong>Gamemode:</strong> Survival & Skyblock</li>
+                <li>❄️ <strong>Openings Tijden:</strong> 24/7</li>
+                <li>☎️ <strong>Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier voor Discord</a></li>
+                <li>⛄ <strong>Website:</strong> <a href="http://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Contacteer ons -->
+    <section class="contact-section">
+        <div class="container">
+            <h2>Contacteer ons:</h2>
+            <ul>
+                <li>☎️ Discord: Maak een ticket aan</li>
+                <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
