--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JD Games</title>
-
-    <!-- Favicon toevoegen -->
+    <title>JDGames</title> <!-- Dit is de titel in de browser tab -->
+    <!-- Voeg de favicon toe -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header Section -->
     <header>
         <div class="container">
             <div class="logo">
@@ -27,38 +24,30 @@
         </div>
     </header>
 
-    <!-- Hero Section (Welkomstbericht) -->
-    <section class="hero-section">
-        <h1 class="hero-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-    </section>
+    <main>
+        <section class="section">
+            <div class="container">
+                <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
 
-    <!-- Informatie Over Ons -->
-    <section class="about-section">
-        <div class="container">
-            <h2>Informatie Over ons:</h2>
-            <ul>
-                <li>✈️ <strong>IP-adres:</strong> Play.jdgames.nl</li>
-                <li>⚡ <strong>Versie:</strong> 1.21+</li>
-                <li>⚔️ <strong>Gamemode:</strong> Survival & Skyblock</li>
-                <li>❄️ <strong>Openings Tijden:</strong> 24/7</li>
-                <li>☎️ <strong>Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier voor Discord</a></li>
-                <li>⛄ <strong>Website:</strong> <a href="http://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
-            </ul>
-        </div>
-    </section>
+                <p>Informatie Over ons:</p>
+                <ul>
+                    <li>✈️ IP-adres: Play.jdgames.nl</li>
+                    <li>⚡ Versie: 1.21+</li>
+                    <li>⚔️ Gamemode: Survival & Skyblock</li>
+                    <li>❄️ Openings Tijden: 24/7</li>
+                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier voor onze Discord</a></li>
+                    <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+                </ul>
 
-    <!-- Contacteer ons -->
-    <section class="contact-section">
-        <div class="container">
-            <h2>Contacteer ons:</h2>
-            <ul>
-                <li>☎️ Discord: Maak een ticket aan</li>
-                <li>☎️ Email: JDGamesOfficialYT@gmail.com</li>
-            </ul>
-        </div>
-    </section>
+                <p>Contacteer ons:</p>
+                <ul>
+                    <li>☎️ Discord: Maak een ticket aan</li>
+                    <li>☎️ Email: <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2024 JD Games. Alle rechten voorbehouden.</p>
         <p>JD Games is op geen enkele manier verbonden met Mojang, AB.</p>
