--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDGames</title> <!-- Dit is de titel in de browser tab -->
-    <!-- Voeg de favicon toe -->
+    <title>JDGames</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,10 +24,9 @@
     </header>
 
     <main>
-        <section class="section">
-            <div class="container">
-                <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-
+        <section class="intro-section">
+            <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+            <div class="info">
                 <p>Informatie Over ons:</p>
                 <ul>
                     <li>✈️ IP-adres: Play.jdgames.nl</li>
