--- a/index.html
+++ b/index.html
@@ -24,20 +24,19 @@
     </header>
 
     <main>
-        <section class="intro-section">
+        <section class="intro">
             <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
             <div class="info">
-                <p>Informatie Over ons:</p>
+                <p><strong>Informatie Over ons:</strong></p>
                 <ul>
                     <li>✈️ IP-adres: Play.jdgames.nl</li>
                     <li>⚡ Versie: 1.21+</li>
                     <li>⚔️ Gamemode: Survival & Skyblock</li>
                     <li>❄️ Openings Tijden: 24/7</li>
-                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Klik hier voor onze Discord</a></li>
+                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Onze Discord</a></li>
                     <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
                 </ul>
-
-                <p>Contacteer ons:</p>
+                <p><strong>Contacteer ons:</strong></p>
                 <ul>
                     <li>☎️ Discord: Maak een ticket aan</li>
                     <li>☎️ Email: <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
