--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staff Team - JD Games</title>
+    <title>JDGames - Staff Team</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,8 +30,8 @@
                 <p>Het is met groot enthousiasme dat wij u verwelkomen op JD Games MC. Wij zijn toegewijd aan het creëren van een uitzonderlijke speelervaring in de Minecraft-wereld, en ons team staat klaar om deze belofte waar te maken. Elk stafflid speelt een vitale rol in het bevorderen van een veilige, respectvolle en stimulerende omgeving voor alle spelers.</p>
                 
                 <h2>Ons Team</h2>
-                <ul>
-                    <li><strong>Jonathan - Eigenaar</strong>: Verantwoordelijk voor betalingen, helpende hand voor het development team, en onderdeel van sollicitatie coördinatie.</li>
+                <ul class="staff-list">
+                    <li><strong>Jonathan - Eigenaar</strong>: Verantwoordelijk voor betalingen, helpt het development team, en is betrokken bij sollicitatie coördinatie.</li>
                     <li><strong>David - Eigenaar</strong>: Verantwoordelijk voor betalingen en het ondersteunen van staffleden/spelers.</li>
                     <li><strong>Nisse - Management</strong>: Hoofd Development team, verantwoordelijk voor plugins & bouwen in de server.</li>
                 </ul>
