--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDGames</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>JD Games</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header>
@@ -24,23 +24,28 @@
     </header>
 
     <main>
-        <section class="intro">
-            <h1>⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
-            <div class="info">
-                <p><strong>Informatie Over ons:</strong></p>
-                <ul>
-                    <li>✈️ IP-adres: Play.jdgames.nl</li>
-                    <li>⚡ Versie: 1.21+</li>
-                    <li>⚔️ Gamemode: Survival & Skyblock</li>
-                    <li>❄️ Openings Tijden: 24/7</li>
-                    <li>☎️ Discord: <a href="https://discord.gg/9haVXV8gXT" target="_blank">Onze Discord</a></li>
-                    <li>⛄ Website: <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
-                </ul>
-                <p><strong>Contacteer ons:</strong></p>
-                <ul>
-                    <li>☎️ Discord: Maak een ticket aan</li>
-                    <li>☎️ Email: <a href="mailto:JDGamesOfficialYT@gmail.com">JDGamesOfficialYT@gmail.com</a></li>
-                </ul>
+        <section class="section">
+            <div class="container">
+                <h1 class="page-title">⚔️ Welkom op de JD Games Minecraft Server ⚔️</h1>
+                <div class="info-box">
+                    <p><strong>Informatie Over ons:</strong></p>
+                    <ul>
+                        <li>✈️ <strong>IP-adres:</strong> Play.jdgames.nl</li>
+                        <li>⚡ <strong>Versie:</strong> 1.21+</li>
+                        <li>⚔️ <strong>Gamemode:</strong> Survival & Skyblock</li>
+                        <li>❄️ <strong>Openings Tijden:</strong> 24/7</li>
+                        <li>☎️ <strong>Discord:</strong> <a href="https://discord.gg/9haVXV8gXT" target="_blank">https://discord.gg/9haVXV8gXT</a></li>
+                        <li>⛄ <strong>Website:</strong> <a href="https://shop.jdgames.nl" target="_blank">shop.jdgames.nl</a></li>
+                    </ul>
+                </div>
+
+                <div class="contact-box">
+                    <p><strong>Contacteer ons:</strong></p>
+                    <ul>
+                        <li>☎️ <strong>Discord:</strong> Maak een ticket aan</li>
+                        <li>☎️ <strong>Email:</strong> JDGamesOfficialYT@gmail.com</li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
