--- a/regels.html
+++ b/regels.html
@@ -16,14 +16,14 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="staff.html">Staff Team</a></li>
-                    <li><a href="regels.html">Regels</a></li>
+                    <li><a href="regels.html" class="active">Regels</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main>
-        <section class="regels-section">
+        <section class="regels-section section">
             <div class="container">
                 <h1 class="page-title">⚔️ Regels - JD Games ⚔️</h1>
                 <p>Om een veilige, eerlijke en plezierige speelomgeving te waarborgen, is het belangrijk dat alle spelers de onderstaande regels naleven. Kies de server waarvoor je de regels wilt zien:</p>
